2009-02-24  Andrew John Hughes  <ahughes@redhat.com>

	* patches/hotspot/original/icedtea-6791168.patch,
	* patches/hotspot/original/icedtea-format.patch,
	* patches/icedtea-awt-window-size.patch,
	* patches/icedtea-f2i-overflow.patch,
	* patches/icedtea-format-warnings.patch,
	* patches/icedtea-fortify-source.patch,
	* patches/icedtea-lib64.patch,
	* patches/icedtea-no-bcopy.patch:
	Removed, applied upstream.
	* HACKING: Updated.
	* Makefile.am: Bump to b48.
	* patches/hotspot/original/icedtea-includedb.patch,
	* patches/icedtea-libraries.patch: Recreated.

2009-02-20  Andrew John Hughes  <ahughes@redhat.com>

 	* overlays/nio2/openjdk/jdk/src/share/classes/java/io/File.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/io/FilePermission.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/net/ProtocolFamily.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/net/SocketOption.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/net/StandardProtocolFamily.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/net/StandardSocketOption.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/Channels.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/DatagramChannel.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/FileChannel.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/FileLock.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/MembershipKey.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/MulticastChannel.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/NetworkChannel.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/exceptions,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/package-info.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/channels/spi/SelectorProvider.java,