@@ -1,6 +1,6 @@
-OPENJDK_DATE = 19_feb_2009
-OPENJDK_MD5SUM = b9846275d2ac5b2f414aa527eaf523ed
-OPENJDK_VERSION = b48
+OPENJDK_DATE = 26_feb_2009
+OPENJDK_MD5SUM = 2401015f65b5c099acf87b3f0b9e8404
+OPENJDK_VERSION = b49
 
 CACAO_VERSION = 0.99.3
 CACAO_MD5SUM = 80de3ad344c1a20c086ec5f1390bd1b8
